<resources>
    <string name="app_name">sharedPreferences</string>
    <string name="delete">Delete</string>
    <string name="read_out">Read Out</string>
    <string name="save">Save</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="e_mail">E-mail</string>
</resources>