<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="MainActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailET"
        android:hint="@string/e_mail"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/firstNameET"
        android:hint="@string/first_name"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/lastNameET"
        android:hint="@string/last_name"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ageET"
        android:padding="10dp"
        android:hint="@string/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/addressET"
        android:padding="10dp"
        android:hint="@string/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:onClick="save"
        android:background="@color/teal_700"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:onClick="read"
        android:background="#1C5009"
        android:text="@string/read_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:onClick="delete"
        android:background="#5A2121"
        android:text="@string/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</LinearLayout>